test/files_test/errors/extra_close_paren.scm
; Test: Extra closing parenthesis - should return exit code 84
(+ 1 2))
